--- a/src/components/Pages/LeaguePage.css
+++ b/src/components/Pages/LeaguePage.css
@@ -34,3 +34,21 @@
 #league-page .fixture .body .score {
     font-size: 25px;
 }
+
+#league-page .header {
+    margin-bottom: 12px;
+}
+
+#league-page .header img {
+    height: 4.7rem;
+    float: left;
+    margin-right: 12px;
+}
+
+#league-page .header > div {
+    display: inline-block;
+}
+
+#league-page .header > div h2{
+    font-size: 2.5rem;
+}
