--- a/src/components/Pages/LeaguePage.css
+++ b/src/components/Pages/LeaguePage.css
@@ -23,7 +23,7 @@
 
 #league-page .fixture .body h3 {
     margin: 15px;
-    font-size: 20px;
+    font-size: 15px;
 }
 
 #league-page .fixture .body img {
@@ -45,13 +45,16 @@
 }
 
 #league-page .header > div h2{
-    font-size: 2.5rem;
-}
-
-#league-page .fixture h3{
-    margin: 0px;
+    font-size: 2rem;
 }
 
 #league-page .fixture img {
-    height: 50px;
+    height: 40px;
 }
+
+#league-page .group-date {
+    font-size: 15px;
+    margin-top: 50px;
+}
+
+
