--- a/src/components/InlineFixture/InlineFixture.css
+++ b/src/components/InlineFixture/InlineFixture.css
@@ -11,3 +11,9 @@
     margin: 10px;
     width: 50px;
 }
+
+.inline-fixture .score span {
+    color: #168005;
+    font-size: 20px;
+    font-weight: bold;
+}
