--- a/src/components/InlineFixture/InlineFixture.css
+++ b/src/components/InlineFixture/InlineFixture.css
@@ -13,7 +13,10 @@
 }
 
 .inline-fixture .score span {
-    color: #168005;
     font-size: 20px;
     font-weight: bold;
+}
+
+.inline-fixture .fixture-elapsed-bar {
+    height:2px;
 }
