--- a/src/components/Pages/TeamPage.css
+++ b/src/components/Pages/TeamPage.css
@@ -1,3 +1,10 @@
 #team-page .team-logo {
     max-width:100%;
+    margin-bottom: 30px;
+}
+
+#team-page .team-venue {
+    max-height: 160px;
+    max-width: 100%;
+    padding-left: 10px;
 }
