--- a/src/components/Pages/HomePage.css
+++ b/src/components/Pages/HomePage.css
@@ -1,16 +1,21 @@
-#home-page .team-card{
+#home-page .team-card {
     min-height: 250px;
     margin-bottom: 20px;
 }
 
-#home-page .favorite-teams{
+#home-page .favorite-teams {
     min-height: 285px;
 }
 
-#home-page .team-card-title{
+#home-page .team-card-title {
     margin-top: 13px;
 }
 
 #home-page .team-card .card-body {
     padding-bottom: 0px;
+}
+
+#home-page .calendar {
+    margin-bottom: 30px;
+    margin-top: 15px;
 }
