--- a/src/components/MissingData/MissingData.css
+++ b/src/components/MissingData/MissingData.css
@@ -1,10 +1,10 @@
-.header {
+.missing-data-page .header{
     font-size: 27pt;
     margin-top: 8vh;
     margin-bottom: 8vh;
 }
 
-.missingData-image{
+.missing-data-page img{
     margin-bottom: 8vh;
     max-width: 100%;
 }
